--- a/Isaiah_Portfolio/src/app.css
+++ b/Isaiah_Portfolio/src/app.css
@@ -1,6 +1,11 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-  }
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+body {
+  background-color: #F5F5F5;
+  color: #333333;
+}
